stateDiagram-v2
  [*] --> pending
  pending --> eligible: dependencies and due time satisfied
  pending --> skipped: condition or policy skip
  pending --> cancelled: cancelled
  eligible --> active: physical attempt claimed
  eligible --> skipped: condition or policy skip
  eligible --> cancelled: cancelled
  active --> eligible: retry schedule becomes eligible
  active --> satisfied: qualifying outcome or assertion policy
  active --> exhausted: no eligible attempt remains
  active --> ambiguous: explicitly sealed or legacy ambiguity
  active --> cancelled: cancelled
  satisfied --> [*]
  exhausted --> [*]
  ambiguous --> [*]
  cancelled --> [*]
  skipped --> [*]
  note right of active
    Resumable unknown_outcome keeps the delivery active.
    An authorized redelivery creates a linked successor attempt.
  end note
